--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="delete">Delete</string>
     <string name="copy">Copy</string>
     <string name="edit">Forward</string>
+    <string name="exit">Forward</string>
+
 </resources>
